修改部分接口

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "uniapp_vue3_vite_ts",
+    "name" : "uniapp_starter",
     "appid" : "__UNI__38BE53A",
     "description" : "",
     "versionName" : "1.1.2",
