--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "crypto-js": "^4.1.1",
         "echarts": "^5.4.2",
         "lodash-es": "^4.17.21",
+        "mockjs": "^1.1.0",
         "pinia": "^2.0.33",
         "qs": "^6.11.1",
         "vue": "^3.2.47"
