--- a/.env.development
+++ b/.env.development
@@ -1,11 +1,11 @@
-# 运行环境
-VITE_ENV = development
+# 开发环境
+VITE_ENV=development
 
-VITE_PORT = 3000
+VITE_PORT=3000
 
 # BASE_URL
-VITE_BASE_URL = /api/v1
+VITE_BASE_URL=/api/v1
 
 # 上传域名
-VITE_UPLOAD_URL = /upload
+VITE_UPLOAD_URL=/upload
 
