--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
-# 运行环境
-VITE_ENV = production
+# 生产环境
+VITE_ENV=production
 
 # api域名
-VITE_BASE_URL = /api/v1
+VITE_BASE_URL=/api/v1
 # 上传域名
-VITE_UPLOAD_URL = /upload
+VITE_UPLOAD_URL=/upload
