--- a/.prettierignore
+++ b/.prettierignore
@@ -4,6 +4,7 @@
 /public
 /node_modules
 /src/static
+/src/tmui
 
 # 忽略文件
 **/*-min.js
@@ -14,3 +15,4 @@
 /src/manifest.json
 .eslintcache
 pnpm-lock.yaml
+/vite.config.ts
