--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "天然气",
+  "name": "晟丰",
   "appid": "__UNI__D0B7835",
   "description": "uniapp Vue3 TypeScript 快速开发框架",
   "versionName": "1.0.0",
