--- a/.env.development
+++ b/.env.development
@@ -20,5 +20,8 @@ VITE_PLATFORM_ID=15
 # 应用id
 VITE_APP_ID=wx7da8016ea034cd0c
 
+# H5 router base
+VITE_PATH_PREFIX=/
+
 # OpenApi地址
 #VITE_OPEN_API=http://127.0.0.1:4523/export/openapi?projectId=2641196
