--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3071220230331002",
         "@fortawesome/fontawesome-free": "^6.4.0",
         "@iconify/iconify": "^3.1.0",
+        "@types/mockjs": "^1.0.7",
         "alova": "^2.0.14",
         "crypto-js": "^4.1.1",
         "echarts": "^5.4.2",
